--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
     "import glob\n",
     "import pickle\n",
     "IMG_DIR = '/mnt/chicm/data/open-images/train/imgs'\n",
-    "MASK_DIR = '/mnt/chicm/data/open-images/masks/train'"
+    "MASK_DIR = '/mnt/chicm/data/open-images/masks/train'\n",
+    "DATA_DIR = '/mnt/chicm/data/open-images/segmentation'"
    ]
   },
   {
@@ -1081,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1210,19 +1211,19 @@
        "4  0.00726 0.56089 1;0.06891 0.61937 1;0.07646 0....  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_masks = pd.read_csv('challenge-2019-train-segmentation-masks.csv')\n",
+    "df_masks = pd.read_csv(osp.join(DATA_DIR, 'challenge-2019-train-segmentation-masks.csv'))\n",
     "df_masks.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1232,7 @@
        "(2125530, 10)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,6 +1626,132 @@
    "source": [
     "imgs_10_26 = set(df_masks.loc[df_mask.LabelName.isin(set(parent_class_10_26))].ImageID.unique())\n",
     "imgs_0_10 = set(df_masks.loc[df_mask.LabelName.isin(set(parent_class_0_10))].ImageID.unique()) - imgs_10_26\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "/m/0k4j       159435\n",
+       "/m/01g317     149166\n",
+       "/m/0c9ph5      89784\n",
+       "/m/0138tl      44162\n",
+       "/m/06msq       26570\n",
+       "/m/015p6       23686\n",
+       "/m/0271t       20735\n",
+       "/m/0ch_cf      12070\n",
+       "/m/02dl1y      10715\n",
+       "/m/07mhn        7289\n",
+       "/m/01mqdt       4162\n",
+       "/m/02crq1       4072\n",
+       "/m/018xm        3150\n",
+       "/m/01lrl        2196\n",
+       "/m/0hf58v5      1910\n",
+       "/m/0k5j         1165\n",
+       "/m/02wv6h6      1055\n",
+       "/m/0l515        1049\n",
+       "/m/0174n1       1022\n",
+       "/m/01x3z         977\n",
+       "/m/06bt6         430\n",
+       "/m/01dws         246\n",
+       "/m/0dv9c         221\n",
+       "/m/0dv77         220\n",
+       "/m/09dzg         164\n",
+       "Name: LabelName, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_masks.loc[df_masks.LabelName.isin(set(get_parent_classes()[0]))].LabelName.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "/m/05r655     173787\n",
+       "/m/083wq      155416\n",
+       "/m/03bt1vf    117234\n",
+       "/m/04yx4      113747\n",
+       "/m/01xyhv     100410\n",
+       "/m/01bl7v      80307\n",
+       "/m/079cl       61076\n",
+       "/m/0fly7       61076\n",
+       "/m/01d40f      47605\n",
+       "/m/01bqk0      43927\n",
+       "/m/04dr76w     24637\n",
+       "/m/0342h       24264\n",
+       "/m/0bt9lr      21934\n",
+       "/m/03120       20748\n",
+       "/m/0cmf2       16662\n",
+       "/m/0fm3zh      14965\n",
+       "/m/01bfm9      12613\n",
+       "/m/0bt_c3      12027\n",
+       "/m/04_sv       11952\n",
+       "/m/01yrx       11402\n",
+       "/m/07r04       10745\n",
+       "/m/0283dt1     10077\n",
+       "/m/09ddx        9912\n",
+       "/m/07jdr        9845\n",
+       "/m/06z37_       9508\n",
+       "/m/03k3r        9031\n",
+       "/m/01rkbr       8953\n",
+       "/m/01bjv        8891\n",
+       "/m/01c648       8449\n",
+       "/m/01xq0k1      7504\n",
+       "               ...  \n",
+       "/m/01f91_        225\n",
+       "/m/0hdln         223\n",
+       "/m/03m3vtv       221\n",
+       "/m/02g30s        213\n",
+       "/m/03v5tg        208\n",
+       "/m/043nyj        201\n",
+       "/m/0fbw6         200\n",
+       "/m/03q5t         192\n",
+       "/m/02w3r3        187\n",
+       "/m/05ctyq        168\n",
+       "/m/02f9f_        167\n",
+       "/m/0frqm         166\n",
+       "/m/01j5ks        163\n",
+       "/m/0d20w4        158\n",
+       "/m/03y6mg        155\n",
+       "/m/06_72j        148\n",
+       "/m/0584n8        147\n",
+       "/m/046dlr        132\n",
+       "/m/02tsc9        120\n",
+       "/m/0lt4_         108\n",
+       "/m/05bm6         103\n",
+       "/m/01kb5b         79\n",
+       "/m/01bms0         69\n",
+       "/m/0cjs7          67\n",
+       "/m/03jbxj         58\n",
+       "/m/02d1br         54\n",
+       "/m/01k6s3         53\n",
+       "/m/02cvgx         33\n",
+       "/m/07dd4          20\n",
+       "/m/0h8ntjv        14\n",
+       "Name: LabelName, Length: 275, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_masks.loc[df_masks.LabelName.isin(set(get_top_classes(0, 275)[0]))].LabelName.value_counts()"
    ]
   },
   {
