--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1756,6 +1756,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "/m/07r04      10745\n",
+       "/m/0283dt1    10077\n",
+       "/m/09ddx       9912\n",
+       "/m/07jdr       9845\n",
+       "/m/06z37_      9508\n",
+       "/m/03k3r       9031\n",
+       "/m/01rkbr      8953\n",
+       "/m/01bjv       8891\n",
+       "/m/01c648      8449\n",
+       "/m/01xq0k1     7504\n",
+       "/m/01gkx_      7406\n",
+       "/m/01n4qj      7168\n",
+       "/m/01j51       7046\n",
+       "/m/0h2r6       6876\n",
+       "/m/0dbvp       6331\n",
+       "/m/01599       6169\n",
+       "/m/06m11       5857\n",
+       "/m/02wbtzl     5742\n",
+       "/m/081qc       5650\n",
+       "/m/07fbm7      5471\n",
+       "/m/0fszt       5122\n",
+       "/m/0dv5r       5094\n",
+       "/m/050k8       5072\n",
+       "/m/039xj_      4837\n",
+       "/m/02p5f1q     4688\n",
+       "/m/0ftb8       4426\n",
+       "/m/07j87       4409\n",
+       "/m/025dyy      4401\n",
+       "/m/024g6       4197\n",
+       "/m/01m2v       4017\n",
+       "              ...  \n",
+       "/m/025rp__     2556\n",
+       "/m/06k2mb      2522\n",
+       "/m/021mn       2513\n",
+       "/m/01z1kdw     2439\n",
+       "/m/03q5c7      2375\n",
+       "/m/015qff      2363\n",
+       "/m/0bwd_0j     2360\n",
+       "/m/080hkjn     2294\n",
+       "/m/05z6w       2274\n",
+       "/m/09b5t       2237\n",
+       "/m/0242l       2183\n",
+       "/m/02s195      2164\n",
+       "/m/02h19r      2155\n",
+       "/m/02jvh9      2082\n",
+       "/m/014j1m      2075\n",
+       "/m/02vqfm      2057\n",
+       "/m/07bgp       2051\n",
+       "/m/04m9y       1890\n",
+       "/m/0gv1x       1890\n",
+       "/m/03fwl       1869\n",
+       "/m/01xqw       1869\n",
+       "/m/019w40      1863\n",
+       "/m/071qp       1856\n",
+       "/m/026qbn5     1820\n",
+       "/m/02l8p9      1759\n",
+       "/m/0gjkl       1724\n",
+       "/m/0663v       1721\n",
+       "/m/0bjyj5      1677\n",
+       "/m/02zn6n      1586\n",
+       "/m/011k07      1577\n",
+       "Name: LabelName, Length: 80, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_masks.loc[df_masks.LabelName.isin(set(get_top_classes(0, 275)[0]))].LabelName.value_counts()[20:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 149,
    "metadata": {},
    "outputs": [
