--- a/notebooks/filter_classes.ipynb
+++ b/notebooks/filter_classes.ipynb
@@ -909,14 +909,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 77%|█████████████████████████████▏        | 18.6M/24.2M [00:07<01:02, 93.5kB/s]"
+      "100%|██████████████████████████████████████| 24.2M/24.2M [00:13<00:00, 1.85MB/s]\n",
+      "Successfully submitted to Open Images 2019 - Instance Segmentation"
      ]
     }
    ],
