--- a/notebooks/merge_df.ipynb
+++ b/notebooks/merge_df.ipynb
@@ -26,65 +26,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 25G\r\n",
-      "-rw-rw-r-- 1 core core 5.3K Aug  8 17:40 challenge-2019-classes-description-segmentable.csv\r\n",
-      "-rw-rw-r-- 1 core core  21K Jul 26 08:26 challenge-2019-label300-segmentable-hierarchy.json\r\n",
-      "-rw-rw-r-- 1 core core 369M Aug  8 17:46 challenge-2019-train-segmentation-bbox.csv\r\n",
-      "-rw-rw-r-- 1 core core  82M Aug  8 17:47 challenge-2019-train-segmentation-labels.csv\r\n",
-      "-rw-rw-r-- 1 core core 613M Aug  8 18:03 challenge-2019-train-segmentation-masks.csv\r\n",
-      "-rw-rw-r-- 1 core core 6.4M Aug  8 18:03 challenge-2019-validation-segmentation-bbox.csv\r\n",
-      "-rw-rw-r-- 1 core core 2.4M Aug  8 18:03 challenge-2019-validation-segmentation-labels.csv\r\n",
-      "-rw-rw-r-- 1 core core 2.7M Aug  8 18:03 challenge-2019-validation-segmentation-masks.csv\r\n",
-      "-rw-rw-r-- 1 core core 543K Sep  1 19:05 check_preds.ipynb\r\n",
-      "-rw-rw-r-- 1 core core 535K Sep  2 17:36 check_preds-parent.ipynb\r\n",
-      "-rw-r--r-- 1 core core 371K Sep  2 09:43 eda.ipynb\r\n",
-      "-rw-rw-r-- 1 core core  27M Sep  2 17:42 merge_1000_0902.csv.zip\r\n",
-      "-rw-rw-r-- 1 core core  25K Sep  2 17:44 merge_df.ipynb\r\n",
-      "-rw-rw-r-- 1 core core 9.7G Jul 26 08:32 open-images-2019-instance-segmentation.zip\r\n",
-      "-rw-rw-r-- 1 core core 2.3M Sep  1 00:03 sample_empty_submission-Copy1.csv\r\n",
-      "-rw-rw---- 1 core core 2.3M Jul  9 10:50 sample_empty_submission.csv\r\n",
-      "-rw-rw---- 1 core core  18K Jul  9 10:50 sample_truncated_submission.csv\r\n",
-      "-rw-rw-r-- 1 core core 1.2G Sep  2 09:23 sub_0902_3_top50.csv.zip\r\n",
-      "-rw-rw-r-- 1 core core 5.6M Aug 31 17:00 sub1_first_1000_test_add_parent.csv\r\n",
-      "-rw-rw-r-- 1 core core 4.4M Aug 31 16:31 sub1_first_1000_test.csv\r\n",
-      "-rw-rw-r-- 1 core core  11M Aug 31 17:05 sub1_first_1000_test_th001.csv\r\n",
-      "-rw-rw-r-- 1 core core  19M Aug 31 17:51 sub1_first_1000_test_top50.csv\r\n",
-      "-rw-rw-r-- 1 core core 1.2G Sep  1 00:33 sub_first_0901_top50.csv.zip\r\n",
-      "-rw-rw-r-- 1 core core  19M Sep  1 18:53 sub_first_1000_0902_1_top50.csv\r\n",
-      "-rw-rw-r-- 1 core core  31M Sep  1 19:04 sub_first_1000_0902_2_top100.csv\r\n",
-      "-rw-rw-r-- 1 core core 336K Sep  2 09:25 submit.ipynb\r\n",
-      "-rw-rw-r-- 1 core core 344K Sep  3 05:50 submit-parent.ipynb\r\n",
-      "-rw-rw-r-- 1 core core  21M Sep  2 17:35 sub_parent_0902_1000_1.csv\r\n",
-      "-rw-rw-r-- 1 core core 1.6G Sep  3 05:46 sub_parent_0903_1_top50.csv\r\n",
-      "---------- 1 core core 9.7G Jul  9 10:50 test.zip\r\n",
-      "-rw-r--r-- 1 core core 4.2K Aug  8 18:03 top_classes.csv\r\n",
-      "-rw-rw-r-- 1 core core 3.9K Aug 23 16:45 top_classes_level1.csv\r\n",
-      "-rw-rw-r-- 1 core core  377 Aug 23 16:47 top_classes_parent.csv\r\n"
+      "configs\t\t\t\t sub_100_275_0909_all_1.csv\r\n",
+      "mmdetection\t\t\t sub_20_100_0909_5000_1.csv\r\n",
+      "notebooks\t\t\t sub_20_100_0909_all_1.csv\r\n",
+      "preds_0902_3_50_all_lb04195.pkl  sub_htc275_0912am_all.csv\r\n",
+      "scripts\t\t\t\t sub_htc_parent_0912pm_all_1.csv\r\n",
+      "seg\t\t\t\t sub_parent_0905_1.csv\r\n",
+      "sub_0_275_0912am_5000_1.csv\t sub_parent_0911_5000_1.csv\r\n",
+      "sub_100_275_0909_5000_1.csv\t sub_parent_0912am_5000_1.csv\r\n",
+      "sub_100_275_0909_5000_iou03.csv  work_dirs\r\n"
      ]
     }
    ],
    "source": [
-    "!ls -lh"
+    "!ls .."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "csv_files = [\n",
-    "            #'sub_first_1000_0902_1_top50.csv',\n",
-    "            #'sub_parent_0902_1000_1.csv',\n",
-    "            'sub_0902_3_top50.csv.zip',\n",
-    "            'sub_parent_0903_1_top50.csv'\n",
+    "            '../sub_htc275_0912am_all.csv',\n",
+    "            '../sub_htc_parent_0912pm_all_1.csv' #,\n",
+    "            #'sub_0902_3_top50.csv.zip',\n",
+    "            #'sub_parent_0903_1_top50.csv'\n",
     "            ]\n",
     "\n",
     "dfs = [pd.read_csv(x) for x in csv_files]"
@@ -92,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12047"
+       "3438"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,35 +143,35 @@
        "      <td>80155d58d0ee19bd</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/083wq 0.0024876 eNqVU01vwyAM/UsGEjb1Ou3QJGC...</td>\n",
+       "      <td>/m/083wq 0.0020746 eNqFU01vwyAM/UsYQtJO3WlVlZS...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>52a76f3fe21185bf</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/083wq 0.0176641 eNoLyIqyzDWISzFABob+2NmUAXS...</td>\n",
+       "      <td>/m/0fszt 0.0313353 eNq9T00PgjAM/UstG3qah8WL7su...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>65e9da7c04c8e4cd</td>\n",
        "      <td>1024</td>\n",
        "      <td>682</td>\n",
-       "      <td></td>\n",
+       "      <td>/m/025nd 0.0010005 eNoLDYlIMrDJTjEw8zH2NfIz9jH...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>6d10fa21d93bd6cc</td>\n",
        "      <td>1024</td>\n",
        "      <td>682</td>\n",
-       "      <td>/m/05r655 0.0065765 eNrNUttSwyAQ/SUICTTNxNFOLL...</td>\n",
+       "      <td>/m/05r655 0.0119960 eNrtU9tugzAM/aVQLiaV9rCHLR...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0841dee573a875ca</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/05r655 0.0021448 eNqFlMmiqjoQRX/JlL4ZjcL0JK...</td>\n",
+       "      <td>/m/05r655 0.0080835 eNpt0dtOAjEQBuBX6rQQoy0anB...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -211,14 +186,14 @@
        "4  0841dee573a875ca        1024          683   \n",
        "\n",
        "                                    PredictionString  \n",
-       "0  /m/083wq 0.0024876 eNqVU01vwyAM/UsGEjb1Ou3QJGC...  \n",
-       "1  /m/083wq 0.0176641 eNoLyIqyzDWISzFABob+2NmUAXS...  \n",
-       "2                                                     \n",
-       "3  /m/05r655 0.0065765 eNrNUttSwyAQ/SUICTTNxNFOLL...  \n",
-       "4  /m/05r655 0.0021448 eNqFlMmiqjoQRX/JlL4ZjcL0JK...  "
+       "0  /m/083wq 0.0020746 eNqFU01vwyAM/UsYQtJO3WlVlZS...  \n",
+       "1  /m/0fszt 0.0313353 eNq9T00PgjAM/UstG3qah8WL7su...  \n",
+       "2  /m/025nd 0.0010005 eNoLDYlIMrDJTjEw8zH2NfIz9jH...  \n",
+       "3  /m/05r655 0.0119960 eNrtU9tugzAM/aVQLiaV9rCHLR...  \n",
+       "4  /m/05r655 0.0080835 eNpt0dtOAjEQBuBX6rQQoy0anB...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -275,70 +250,70 @@
        "      <td>80155d58d0ee19bd</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/0k4j 0.2084172 eNqNU1tuwyAQvBLLw6gnSI15KAeo...</td>\n",
+       "      <td>/m/0k4j 0.0144516 eNqFU7luwzAM/SWdcbK0yCZbBxEP...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>52a76f3fe21185bf</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/0k4j 0.0547043 eNpLCQmxzDeISTFAAEN/GIlgGWDI...</td>\n",
+       "      <td>/m/01g317 0.0056462 eNozzTZKM4gyzLdJ8wt0xk4HOE...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>65e9da7c04c8e4cd</td>\n",
        "      <td>1024</td>\n",
        "      <td>682</td>\n",
-       "      <td>/m/02crq1 0.0013185 eNoLiDDMN4hOMYAAQ38Df0MQCW...</td>\n",
+       "      <td>/m/015p6 0.0019611 eNqLSgswNw1NNTD0B0IDA38jP0M...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>6d10fa21d93bd6cc</td>\n",
        "      <td>1024</td>\n",
        "      <td>682</td>\n",
-       "      <td>/m/0k4j 0.0118669 eNpNi8EKwkAMRH9pdtFFoQfFi1TJ...</td>\n",
+       "      <td>/m/01g317 0.4327452 eNrNUttugzAM/aWGQAOttIdJBb...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0841dee573a875ca</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/0k4j 0.0986574 eNoLC4wxSjDKTjJABYb+MBIZg0gE...</td>\n",
+       "      <td>/m/0k4j 0.0063638 eNoLCU0yMg1MNbBxM/c08zT3NvYx...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>660329181edd20b4</td>\n",
        "      <td>1024</td>\n",
        "      <td>483</td>\n",
-       "      <td>/m/01g317 0.0025120 eNp1UtFuwjAM/CU7bVaVScCmqZ...</td>\n",
+       "      <td>/m/01g317 0.0118703 eNpNUWFPxCAM/UuFjrGdyRKj2c...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2dffa0787ba35f70</td>\n",
        "      <td>1024</td>\n",
        "      <td>545</td>\n",
-       "      <td>/m/01g317 0.0115226 eNpLTgwzMs9IMDD2M/SHQwMDKG...</td>\n",
+       "      <td>/m/0c9ph5 0.9175597 eNpVT00LwjAM/Ut5bUXGDkM8OW...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>cb66703ecbd0b99a</td>\n",
        "      <td>1024</td>\n",
        "      <td>678</td>\n",
-       "      <td>/m/0k4j 0.0017437 eNqLDIlOMjAOTDUw8TH2M/QDYgMD...</td>\n",
+       "      <td>/m/0k4j 0.0013056 eNoLTzBIM0hIMQACf0MgYehvgAOA...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>2f01f2c68316b5e5</td>\n",
        "      <td>1024</td>\n",
        "      <td>768</td>\n",
-       "      <td>/m/0k4j 0.1820910 eNqNU81uwyAMfiUbR9qhj9Bgq1O1...</td>\n",
+       "      <td>/m/0k4j 0.1164669 eNoLC01OMjDMSzcw8jP0NzQwAGJD...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>36cfe3fa46f56ed3</td>\n",
        "      <td>768</td>\n",
        "      <td>768</td>\n",
-       "      <td>/m/0k4j 0.0310719 eNrLzAk1MklLN7B2N/My9zb1MfID...</td>\n",
+       "      <td>/m/0k4j 0.0147882 eNrLzQk1MspKNzDzNHez8jHzNPU1...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -358,19 +333,19 @@
        "9  36cfe3fa46f56ed3         768          768   \n",
        "\n",
        "                                    PredictionString  \n",
-       "0  /m/0k4j 0.2084172 eNqNU1tuwyAQvBLLw6gnSI15KAeo...  \n",
-       "1  /m/0k4j 0.0547043 eNpLCQmxzDeISTFAAEN/GIlgGWDI...  \n",
-       "2  /m/02crq1 0.0013185 eNoLiDDMN4hOMYAAQ38Df0MQCW...  \n",
-       "3  /m/0k4j 0.0118669 eNpNi8EKwkAMRH9pdtFFoQfFi1TJ...  \n",
-       "4  /m/0k4j 0.0986574 eNoLC4wxSjDKTjJABYb+MBIZg0gE...  \n",
-       "5  /m/01g317 0.0025120 eNp1UtFuwjAM/CU7bVaVScCmqZ...  \n",
-       "6  /m/01g317 0.0115226 eNpLTgwzMs9IMDD2M/SHQwMDKG...  \n",
-       "7  /m/0k4j 0.0017437 eNqLDIlOMjAOTDUw8TH2M/QDYgMD...  \n",
-       "8  /m/0k4j 0.1820910 eNqNU81uwyAMfiUbR9qhj9Bgq1O1...  \n",
-       "9  /m/0k4j 0.0310719 eNrLzAk1MklLN7B2N/My9zb1MfID...  "
+       "0  /m/0k4j 0.0144516 eNqFU7luwzAM/SWdcbK0yCZbBxEP...  \n",
+       "1  /m/01g317 0.0056462 eNozzTZKM4gyzLdJ8wt0xk4HOE...  \n",
+       "2  /m/015p6 0.0019611 eNqLSgswNw1NNTD0B0IDA38jP0M...  \n",
+       "3  /m/01g317 0.4327452 eNrNUttugzAM/aWGQAOttIdJBb...  \n",
+       "4  /m/0k4j 0.0063638 eNoLCU0yMg1MNbBxM/c08zT3NvYx...  \n",
+       "5  /m/01g317 0.0118703 eNpNUWFPxCAM/UuFjrGdyRKj2c...  \n",
+       "6  /m/0c9ph5 0.9175597 eNpVT00LwjAM/Ut5bUXGDkM8OW...  \n",
+       "7  /m/0k4j 0.0013056 eNoLTzBIM0hIMQACf0MgYehvgAOA...  \n",
+       "8  /m/0k4j 0.1164669 eNoLC01OMjDMSzcw8jP0NzQwAGJD...  \n",
+       "9  /m/0k4j 0.0147882 eNrLzQk1MspKNzDzNHez8jHzNPU1...  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,14 +370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34068 12047\n"
+      "23927 3438\n"
      ]
     }
    ],
@@ -413,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -449,35 +424,35 @@
        "      <td>80155d58d0ee19bd</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/083wq 0.0024876 eNqVU01vwyAM/UsGEjb1Ou3QJGC...</td>\n",
+       "      <td>/m/083wq 0.0020746 eNqFU01vwyAM/UsYQtJO3WlVlZS...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>52a76f3fe21185bf</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/083wq 0.0176641 eNoLyIqyzDWISzFABob+2NmUAXS...</td>\n",
+       "      <td>/m/0fszt 0.0313353 eNq9T00PgjAM/UstG3qah8WL7su...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>65e9da7c04c8e4cd</td>\n",
        "      <td>1024</td>\n",
        "      <td>682</td>\n",
-       "      <td>/m/02crq1 0.0013185 eNoLiDDMN4hOMYAAQ38Df0MQC...</td>\n",
+       "      <td>/m/025nd 0.0010005 eNoLDYlIMrDJTjEw8zH2NfIz9jH...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>6d10fa21d93bd6cc</td>\n",
        "      <td>1024</td>\n",
        "      <td>682</td>\n",
-       "      <td>/m/05r655 0.0065765 eNrNUttSwyAQ/SUICTTNxNFOLL...</td>\n",
+       "      <td>/m/05r655 0.0119960 eNrtU9tugzAM/aVQLiaV9rCHLR...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0841dee573a875ca</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/05r655 0.0021448 eNqFlMmiqjoQRX/JlL4ZjcL0JK...</td>\n",
+       "      <td>/m/05r655 0.0080835 eNpt0dtOAjEQBuBX6rQQoy0anB...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -492,14 +467,14 @@
        "4  0841dee573a875ca        1024          683   \n",
        "\n",
        "                                    PredictionString  \n",
-       "0  /m/083wq 0.0024876 eNqVU01vwyAM/UsGEjb1Ou3QJGC...  \n",
-       "1  /m/083wq 0.0176641 eNoLyIqyzDWISzFABob+2NmUAXS...  \n",
-       "2   /m/02crq1 0.0013185 eNoLiDDMN4hOMYAAQ38Df0MQC...  \n",
-       "3  /m/05r655 0.0065765 eNrNUttSwyAQ/SUICTTNxNFOLL...  \n",
-       "4  /m/05r655 0.0021448 eNqFlMmiqjoQRX/JlL4ZjcL0JK...  "
+       "0  /m/083wq 0.0020746 eNqFU01vwyAM/UsYQtJO3WlVlZS...  \n",
+       "1  /m/0fszt 0.0313353 eNq9T00PgjAM/UstG3qah8WL7su...  \n",
+       "2  /m/025nd 0.0010005 eNoLDYlIMrDJTjEw8zH2NfIz9jH...  \n",
+       "3  /m/05r655 0.0119960 eNrtU9tugzAM/aVQLiaV9rCHLR...  \n",
+       "4  /m/05r655 0.0080835 eNpt0dtOAjEQBuBX6rQQoy0anB...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,29 +485,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs[0].to_csv('merge_0903_1.csv', index=False)"
+    "dfs[0].to_csv('merge_0912_1.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 3.15G/3.15G [01:21<00:00, 41.5MB/s]\n",
+      "100%|██████████████████████████████████████| 2.55G/2.55G [02:07<00:00, 21.5MB/s]\n",
       "Successfully submitted to Open Images 2019 - Instance Segmentation"
      ]
     }
    ],
    "source": [
-    "!kaggle competitions submit -c open-images-2019-instance-segmentation -f merge_0903_1.csv -m \"merge 0903\""
+    "!kaggle competitions submit -c open-images-2019-instance-segmentation -f merge_0912_1.csv -m \"merge 0912\""
    ]
   },
   {
